<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contacts.ContactsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.contacts.ContactsFragment">

        <EditText
            android:id="@+id/length1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView4"
            android:background="@android:drawable/alert_dark_frame"
            android:hint="@string/enter_length"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/length2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/length1"
            android:layout_alignEnd="@+id/length1"
            android:layout_toEndOf="@+id/textView5"
            android:background="@android:drawable/alert_dark_frame"
            android:hint="@string/enter_length"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:text="@string/length_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/length1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:text="@string/length_2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/length2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:text="@string/square"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/areaVal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/length2"
            android:layout_alignStart="@+id/length2"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/alert_dark_frame"
            android:paddingStart="15dp"
            android:paddingBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlSymmetry" />

        <RadioGroup
            android:id="@+id/rGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignEnd="@+id/areaVal"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:forceHasOverlappingRendering="false"
            tools:targetApi="n">

            <RadioButton
                android:id="@+id/rbTriangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_of_triangle"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbSquare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/area_of_square"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_of_rectangle"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_of_circle"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbClearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/clear_all"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rGrp"
            android:layout_centerHorizontal="true"
            android:background="@android:drawable/alert_dark_frame"
            android:padding="20dp"
            android:text="@string/calculate"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>