<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@android:drawable/alert_dark_frame"
                    android:ems="10"
                    android:inputType="text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:text="@string/result_old"
                    app:layout_constraintEnd_toEndOf="@+id/tableRow2"
                    app:layout_constraintStart_toStartOf="@+id/tableRow2"
                    app:layout_constraintTop_toBottomOf="@+id/tableRow2" />

                <TextView
                    android:id="@+id/nr"
                    android:layout_width="200dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:background="@android:drawable/alert_dark_frame"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    app:layout_constraintEnd_toEndOf="@+id/tableLayout"
                    app:layout_constraintStart_toStartOf="@+id/tableLayout"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout">

                    <Button
                        android:id="@+id/bClear"
                        android:layout_width="116.6dp"
                        android:layout_height="70dp"
                        android:background="@android:drawable/alert_dark_frame"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="bold|italic"
                        android:text="@string/clear"
                        tools:layout_editor_absoluteX="60dp"
                        tools:layout_editor_absoluteY="425dp" />

                    <Button
                        android:id="@+id/bBack"
                        android:layout_width="116.6dp"
                        android:layout_height="70dp"
                        android:background="@android:drawable/alert_dark_frame"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:text="@string/back"
                        tools:layout_editor_absoluteX="93dp"
                        tools:layout_editor_absoluteY="503dp" />

                    <Button
                        android:id="@+id/bRes"
                        android:layout_width="117dp"
                        android:layout_height="70dp"
                        android:background="@android:drawable/alert_dark_frame"
                        android:text="="
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        tools:layout_editor_absoluteX="230dp"
                        tools:layout_editor_absoluteY="460dp" />
                </TableRow>

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="350dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent">

                        <Button
                            android:id="@+id/bPlus"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="+"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="88dp" />

                        <Button
                            android:id="@+id/bMinus"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="-"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="86dp"
                            tools:layout_editor_absoluteY="88dp" />

                        <Button
                            android:id="@+id/bMnojenya"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="*"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="164dp"
                            tools:layout_editor_absoluteY="88dp" />

                        <Button
                            android:id="@+id/bDilenya"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="/"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="242dp"
                            tools:layout_editor_absoluteY="88dp" />

                        <Button
                            android:id="@+id/bc"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="."
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="244dp"
                            tools:layout_editor_absoluteY="124dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/b1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="1"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="193dp" />

                        <Button
                            android:id="@+id/b2"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="2"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="72dp"
                            tools:layout_editor_absoluteY="193dp" />

                        <Button
                            android:id="@+id/b3"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="3"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="150dp"
                            tools:layout_editor_absoluteY="193dp" />

                        <Button
                            android:id="@+id/b4"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="4"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="228dp"
                            tools:layout_editor_absoluteY="193dp" />

                        <Button
                            android:id="@+id/b5"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="5"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="306dp"
                            tools:layout_editor_absoluteY="193dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/b6"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="6"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="271dp" />

                        <Button
                            android:id="@+id/b7"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="7"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="74dp"
                            tools:layout_editor_absoluteY="271dp" />

                        <Button
                            android:id="@+id/b8"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="8"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="148dp"
                            tools:layout_editor_absoluteY="271dp" />

                        <Button
                            android:id="@+id/b9"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="9"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="226dp"
                            tools:layout_editor_absoluteY="271dp" />

                        <Button
                            android:id="@+id/b0"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@android:drawable/alert_dark_frame"
                            android:text="0"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="35sp"
                            android:textStyle="bold|italic"
                            tools:layout_editor_absoluteX="312dp"
                            tools:layout_editor_absoluteY="271dp" />

                    </TableRow>

                </TableLayout>

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>